edited articles 7 and 8 of the guide to get them ready for inclusion

--- a/beginners-programming/guides/index.html
+++ b/beginners-programming/guides/index.html
@@ -77,6 +77,18 @@
   <li><a href="lesson9.html">Lesson 9: Objects and going further</a></li>
 </ol>
 
+<h2>Further resources</h2>
+
+<p>Once you've worked your way through this beginner's course, we would advise you to go on to the following:</p>
+
+<ul>
+  <li>Sign up to <a href="http://www.codecademy.com/dashboard">Codecademy</a> and work through all the JavaScript Fundamentals courses. This is a great way to get the basics into your head.</li>
+  <li>Work through some of the other courses on codecademy such as the Web fundamentals, jQuery, Python and Ruby courses.</li>
+  <li>Have a look Code School's <a href="http://www.codeschool.com/courses">training videos</a></li>
+  <li>Download and read the rather excellent free book, <a href="http://eloquentjavascript.net/">Eloquent JavaScript</a>.</li>
+  <li>Look at lots of other people's code! Go on to your favourite web sites and view source, go to <a href="https://www.github.com">Github</a> and search for some interesting code.</li>
+</ul>
+
 <hr>
 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. Share it, make it better, use it for good.</p>
    
