--- a/beginners-programming/guides/lesson2.html
+++ b/beginners-programming/guides/lesson2.html
@@ -194,8 +194,8 @@ var faveFoods = ["Coco Pops", "Fajitas", "Curry", "Bacon"];
 <li><strong>-</strong> : the subtraction operator</li>
 <li><strong>%</strong> : the modulus operator; returns the remainder of one number being divided by another</li>
 <li><strong>=</strong> : the assignment operator</li>
-<li><strong>==</strong> : the equality operator</li>
-<li><strong>===</strong>: the strict equality operator</li>
+<li><strong>==</strong> : the equality operator (don't use this)</li>
+<li><strong>===</strong>: the strict equality operator (use this instead)</li>
 <li><strong>||</strong> : the or operator</li>
 <li><strong>&&</strong> : the and operator</li>
 <li><strong>!</strong> : the not operator</li>
