progress made on slides - committing work so far

--- a/beginners-programming/slides/index.html
+++ b/beginners-programming/slides/index.html
@@ -9,12 +9,12 @@
 </head>
 <body class="list">
 	<header class="caption">
-		<h1>Shower Presentation Engine</h1>
-		<p>Yours Truly, Famous Inc.</p>
+		<h1>Programming for beginners</h1>
+		<p>Mozilla and you</p>
 	</header>
 	<section class="slide cover" id="Cover"><div>
-		<h2>Shower Presentation Engine</h2>
-		<p>Brought to you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
+		<h2>Programming for beginners</h2>
+		<p>Brought to you by the <a href="https://developer.mozilla.org/">Mozilla Developer Network</a></p>
 		<img src="pictures/cover.jpg" alt="">
 		<!--
 			To apply styles to the certain slides
@@ -39,6 +39,133 @@
 					}
 		</style>
 	</div></section>
+
+    <section class="slide"><div>
+
+      <ol>
+        <li>Intro</li>
+        <li>Variables</li>
+        <li>Conditions & loops</li>
+        <li>Document Object Model (DOM)</li>
+        <li><code>&lt;canvas&gt;</code></li>
+        <li>Functions</li>
+        <li>Events</li>
+      </ol>
+
+    </div></section>
+
+    <section class="slide cover" id="Picture"><div>
+		<h2>Intro</h2>
+		<img src="pictures/picture.jpg" alt="">
+		<style>
+			#Picture h2 {
+				color:#FFF;
+				}
+		</style>
+	</div></section>
+
+	<section class="slide"><div>
+		<h2>Code</h2>
+		<ul>
+		  <li>Human language = talk to humans</li>
+		  <li>Programming = writing code</li>
+		  <li>Code = language, to talk to a computer</li>
+		  <li>JavaScript = code that talks to a web browser</li>
+		</ul>
+	</div></section>
+
+	<section class="slide"><div>
+		<h2>JavaScript is interpreted</h2>
+		<ul>
+		  <li>JavaScript engine inside browser</li>
+		  <li>Browser turns code into web pages/apps</li>
+		  <li></li>
+		</ul>
+	</div></section>
+
+	<section class="slide"><div>
+		<h2>How the Web works</h2>
+		<ol>
+		  <li>Browser (client) requests web page</li>
+		  <li>Request sent to server</li>
+		  <li>Server sends code to browser</li>
+		  <li>Browser turns code into web pages/apps</li>
+		</ol>
+	</div></section>
+
+	<section class="slide"><div>
+		<h2>server-side vs client-side</h2>
+		<ul>
+		  <li><strong>Server-side code</strong>: runs on server, then result is sent to client</li>
+		  <li><strong>Client-side code</strong>: code sent to client, and runs on client</li>
+		</ul>
+	</div></section>
+
+    <section class="slide cover" id="Picture"><div>
+		<h2>Variables</h2>
+		<img src="pictures/picture.jpg" alt="">
+		<style>
+			#Picture h2 {
+				color:#FFF;
+				}
+		</style>
+	</div></section>
+
+	<section class="slide cover" id="Picture"><div>
+		<h2>Conditions & loops</h2>
+		<img src="pictures/picture.jpg" alt="">
+		<style>
+			#Picture h2 {
+				color:#FFF;
+				}
+		</style>
+	</div></section>
+
+	<section class="slide cover" id="Picture"><div>
+		<h2>Document Object Model</h2>
+		<img src="pictures/picture.jpg" alt="">
+		<style>
+			#Picture h2 {
+				color:#FFF;
+				}
+		</style>
+	</div></section>
+
+	<section class="slide cover" id="Picture"><div>
+		<h2>Canvas</h2>
+		<img src="pictures/picture.jpg" alt="">
+		<style>
+			#Picture h2 {
+				color:#FFF;
+				}
+		</style>
+	</div></section>
+
+	<section class="slide cover" id="Picture"><div>
+		<h2>Functions</h2>
+		<img src="pictures/picture.jpg" alt="">
+		<style>
+			#Picture h2 {
+				color:#FFF;
+				}
+		</style>
+	</div></section>
+
+	<section class="slide cover" id="Picture"><div>
+		<h2>Events</h2>
+		<img src="pictures/picture.jpg" alt="">
+		<style>
+			#Picture h2 {
+				color:#FFF;
+				}
+		</style>
+	</div></section>
+
+
+
+
+
+
 	<section class="slide"><div>
 		<h2>Shower Key Features</h2>
 		<ol>
@@ -148,22 +275,21 @@
 			<li class="next">Nobody wants to see the same joke twice</li>
 		</ol>
 	</div></section>
-	<section class="slide shout" id="SeeMore"><div>
-		<h2><img src="pictures/logo.svg" alt=""> <a href="https://github.com/shower/shower">See more on GitHub</a></h2>
-		<style>
-			#Picture h2 {
-				color:#FFF;
-				}
-			#SeeMore h2 {
-				font-size:100px
-				}
-			#SeeMore img {
-				width:0.72em;
-				height:0.72em;
-				}
-		</style>
+
+
+
+
+
+	<section class="slide"><div>
+		<h2>Credits</h2>
+
+		<ul>
+          <li><a href="https://www.flickr.com/photos/trinity-of-one/20562069/">"Matrix" cover pic</a> by <a href="https://www.flickr.com/photos/trinity-of-one/">David Asch</a></li>
+		</ul>
+		
 	</div></section>
-	<p class="badge"><a href="https://github.com/shower/shower">Fork me on Github</a></p>
+
+	<p class="badge"><a href="https://github.com/mdn/topic-kits/tree/master/beginners-programming">Fork me on Github</a></p>
 	<!--
 		To hide progress bar from entire presentation
 		just remove “progress” element.
